<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.HomeFragment">

    <TextView
        android:id="@+id/choose_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_year"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/gradientStart"
        android:textSize="30sp"
        android:paddingStart="20dp"
        />

    <HorizontalScrollView
        android:id="@+id/yearBtnList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_year"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnYear1"
                style="@style/YearBtn"
                android:layout_width="160dp"
                android:layout_height="90dp"
                android:background="@drawable/year_btn_selector"
                android:text="@string/year_1"
                app:shapeAppearance="@style/YearBtn" />
            <Button
                android:id="@+id/btnYear2"
                android:layout_marginStart="10dp"
                android:layout_width="160dp"
                android:layout_height="90dp"
                android:text="@string/year_2"
                />
            <Button
                android:id="@+id/btnYear3"
                android:layout_marginStart="10dp"
                android:layout_width="160dp"
                android:layout_height="90dp"
                android:text="@string/year_3"
                />
            <Button
                android:id="@+id/btnYear4"
                android:layout_marginStart="10dp"
                android:layout_width="160dp"
                android:layout_height="90dp"
                android:text="@string/year_4"
                />

        </LinearLayout>
    </HorizontalScrollView>

    <ListView
        android:layout_marginTop="10dp"
        android:id="@+id/coursesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yearBtnList"
        android:divider="@null"
        android:paddingBottom="60dp"
        android:scrollbars="none"
        />


</RelativeLayout>