<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_gravity="center"
        android:layout_marginTop="152dp"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ubuntu_mono_bold"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/minds"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="175dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/registerBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:padding="20dp"
                tools:ignore="NestedWeights"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/register_btn"
                android:contentDescription="@string/register_image" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_mono_bold"
                android:gravity="center"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/loginBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:padding="20dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/login_btn"
                tools:ignore="NestedWeights"
                android:contentDescription="@string/login_img" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_mono_bold"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/continueBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:padding="20dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/continue_btn"
                tools:ignore="NestedWeights"
                android:contentDescription="@string/continue_img" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_mono_bold"
                android:gravity="center"
                android:text="@string/continua"
                android:textAllCaps="true"
                android:textColor="#FFFFFF" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>