<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragments.MyAccount">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_photo"
        app:civ_border_color="@color/gradientStart"
        app:civ_border_width="2dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_above="@+id/userName"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/userName"
        android:layout_centerInParent="true"
        android:layout_above="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/gradientStart"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"
        />

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        >
    <com.google.android.material.button.MaterialButton
        android:id="@+id/MyDocsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="40dp"
        android:paddingStart="20dp"
        app:backgroundTint="@color/darkPurple"
        android:textColor="@android:color/white"
        android:text="@string/my_docs"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textAllCaps="false"
        app:icon="@drawable/ic_my_docs"
        app:iconTint="@android:color/white"
        app:iconSize="30dp"
        android:fontFamily="@font/montserrat"
        style="@style/NoShadowButton"

        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/account_UploadBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="40dp"
        android:paddingStart="20dp"
        app:backgroundTint="@color/darkPurple"
        android:textColor="@android:color/white"
        android:text="@string/upload"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:icon="@drawable/ic_upload"
        app:iconTint="@android:color/white"
        app:iconSize="30dp"
        android:fontFamily="@font/montserrat"
        style="@style/NoShadowButton"

        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/account_SettingsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="40dp"
        android:paddingStart="20dp"
        app:backgroundTint="@color/darkPurple"
        android:textColor="@android:color/white"
        android:text="@string/settings"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:icon="@drawable/ic_settings"
        app:iconTint="@android:color/white"
        app:iconSize="30dp"
        android:fontFamily="@font/montserrat"
        style="@style/NoShadowButton"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/account_LogOut"
        android:layout_marginBottom="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="40dp"
        android:paddingStart="20dp"
        app:backgroundTint="@color/darkPurple"
        android:textColor="@android:color/white"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textAllCaps="false"
        app:icon="@drawable/ic_logout"
        app:iconTint="@android:color/white"
        app:iconSize="30dp"
        android:fontFamily="@font/montserrat"
        style="@style/NoShadowButton"
        />
    </LinearLayout>
</RelativeLayout>